commit add changes commit

--- a/src/login/Multi-theme login.html
+++ b/src/login/Multi-theme login.html
@@ -409,12 +409,12 @@
         </div>
         <button>
           <span class="link_btn">
-            <a href="C:\Users\stell\OneDrive\Desktop\login\login\medihomepage.html">Log In</a>
+            <a href="/home/stella/home/moringa/moringa-projects/my-final-project/src/login/medihomepage.html">Log In</a>
         </span></button>
 
 
         <div class="register">
-          <p>Don't have an account ? <a href="C:\Users\stell\OneDrive\Desktop\login\login\medihomepage.html">register</a></p>
+          <p>Don't have an account ? <a href="/home/stella/home/moringa/moringa-projects/my-final-project/src/login/medihomepage.html">register</a></p>
         </div>
       </form>
 
