--- a/src/login/billing.html
+++ b/src/login/billing.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="form-group">
                         <label for="billing-amount">Amount Due</label>
-                        <input type="text" id="billing-amount" name="billingAmount" value="$200.00" readonly>
+                        <input type="text" id="billing-amount" name="billingAmount" value="ksh" readonly>
                     </div>
                     <div class="form-group">
                         <label for="card-number">Card Number</label>
