--- a/src/patient.html
+++ b/src/patient.html
@@ -21,15 +21,15 @@
                     <div class="card">
                         <h3>Upcoming Appointments</h3>
                         </ul>
-                        <a href="C:\Users\user\OneDrive\Desktop\login\schedule.html" class="btn-primary">Schedule New Appointment</a>
+                        <a href="schedule.html" class="btn-primary">Schedule New Appointment</a>
                     </div>
                     <div class="card">
                         <h3>Medical Records</h3>
-                        <a href="C:\Users\user\OneDrive\Desktop\login\medicalrec.html" class="btn-secondary">View Medical Records</a>
+                        <a href="medicalrec.html" class="btn-secondary">View Medical Records</a>
                     </div>
                     <div class="card">
                         <h3>Billing Information</h3>
-                        <a href="C:\Users\user\OneDrive\Desktop\login\billing.html" class="btn-secondary">View Billing Statements</a>
+                        <a href="billing.html" class="btn-secondary">View Billing Statements</a>
                     </div>
                 </div>
             </div>
