commit addition and remove some pages commit

--- a/src/billing.html
+++ b/src/billing.html
@@ -23,7 +23,7 @@
                     </div>
                     <div class="summary-item">
                         <span class="summary-title">Amount Due:</span>
-                        <span class="summary-value">$200.00</span>
+                        <span class="summary-value">ksh200.00</span>
                     </div>
                     <div class="summary-item">
                         <span class="summary-title">Service Date:</span>
@@ -37,7 +37,7 @@
                     </div>
                     <div class="form-group">
                         <label for="billing-amount">Amount Due</label>
-                        <input type="text" id="billing-amount" name="billingAmount" value="$200.00" readonly>
+                        <input type="text" id="billing-amount" name="billingAmount" value="ksh." required>
                     </div>
                     <div class="form-group">
                         <label for="card-number">Card Number</label>
@@ -61,5 +61,6 @@
             <p>&copy; 2024 Virtual Hospital. All rights reserved.</p>
         </footer>
     </div>
+    <script src="billing.js"></script>
 </body>
 </html>
