--- a/src/login.html
+++ b/src/login.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,66 +9,40 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link rel="stylesheet" href="https://startbootstrap.com/templates/agency/font-awesome-4.1.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="login.css">
-  <link rel="stylesheet" href="login.js">
 </head>
-<body>
-
-  <body id="page-top" class="index" data-pinterest-extension-installed="cr1.3.4">
-
-    <label class="dayNight">
-      <input type="checkbox">
-      <div></div>
-    </label>
-    <div class="box">
-
-      <form action="">
-
-        <h2>Login Here</h2>
-
-        <div class="inputbox">
-          <ion-icon name="mail-outline"></ion-icon>
-          <input type="email" name="" id="" required>
-          <label for="">Email:</label>
-        </div>
-
-        <div class="inputbox">
-          <ion-icon name="lock-closed-outline"></ion-icon>
-          <input type="password" name="" id="" required>
-          <label for="">Password:</label>
-        </div>
-
-        <div class="forget">
-          <label for="">
-            <input type="checkbox">Remember me>
-          </label>
-          <label for="">
-            Forget Password
-          </label>
-        </div>
-        <button>
-          <span class="link_btn">
-            <a href="home.html">Log In</a>
-        </span></button>
-
-
-        <div class="register">
-          <p>Don't have an account ? <a href="register.html">register</a></p>
-        </div>
-      </form>
-
-    </div>
-
-
-
-  
-
-    <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
-    <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
-
-
-  </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
+<body id="page-top" class="index">
+  <label class="dayNight">
+    <input type="checkbox">
+    <div></div>
+  </label>
+  <div class="box">
+    <form id="loginForm">
+      <h2>Login Here</h2>
+      <div class="inputbox">
+        <ion-icon name="mail-outline"></ion-icon>
+        <input type="email" name="email" required>
+        <label>Email:</label>
+      </div>
+      <div class="inputbox">
+        <ion-icon name="lock-closed-outline"></ion-icon>
+        <input type="password" name="password" required>
+        <label>Password:</label>
+      </div>
+      <div class="forget">
+        <label>
+          <input type="checkbox"> Remember me
+        </label>
+        <a href="#">Forget Password</a>
+      </div>
+      <button type="submit">Log In</button>
+      <div class="register">
+        <p>Don't have an account? <a href="register.html">Register</a></p>
+      </div>
+    </form>
+  </div>
+  <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
+  <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="login.js"></script>
 </body>
-
 </html>
