--- a/src/register.html
+++ b/src/register.html
@@ -5,13 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Register</title>
+  <!-- Include your CSS links here -->
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link rel="stylesheet" href="https://startbootstrap.com/templates/agency/font-awesome-4.1.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="home.html">
   <link rel="stylesheet" href="register.css">
-  <link rel="stylesheet" href="register.js">
 </head>
 
 <body>
@@ -22,7 +21,7 @@
   </label>
   <div class="box">
 
-    <form action="">
+    <form id="registerForm">
 
       <h2>Register Here</h2>
 
@@ -50,9 +49,9 @@
         <label for="confirm_password">Confirm Password:</label>
       </div>
 
-      <button type="submit"><a href="home.html"></a>Register</button>
+      <button type="submit">Register</button>
 
-      <div class="register" >
+      <div class="register">
         <p>Already have an account? <a href="login.html">Login</a></p>
       </div>
     </form>
@@ -61,9 +60,9 @@
 
   <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
   <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="register.js"></script>
 
 </body>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 </html>
