--- a/src/main.html
+++ b/src/main.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" href="main.js">
+  
 </head>
 
 <body>
@@ -99,7 +99,7 @@
   </div>
 
   <footer class="container-fluid text-center">
-    <a href="#myPage" title="To Top">
+    <a href="#" title="To Top">
       <span class="glyphicon glyphicon-chevron-up"></span>
     </a>
     <p>© 2024 MediHub. All rights reserved.</p>
@@ -107,6 +107,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+  <script src="main.js"></script>
   
 </body>
 
