--- a/src/schedule.html
+++ b/src/schedule.html
@@ -139,6 +139,6 @@
             </ul>
         </div>
     </footer>
-    <script src="scripts.js"></script>
+    <script src="schedule.js"></script>
 </body>
 </html>
