--- a/src/services.html
+++ b/src/services.html
@@ -52,6 +52,6 @@
             <p>&copy; 2024 MediHub. All rights reserved.</p>
         </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="services.js"></script>
 </body>
 </html>
