--- a/src/home.html
+++ b/src/home.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="patient.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="">
 </head>
 <body>
     <div class="sidebar">
