add login.js files

--- a/src/login.html
+++ b/src/login.html
@@ -34,7 +34,7 @@
         </label>
         <a href="#">Forget Password</a>
       </div>
-      <button type="submit">Log In</button>
+      <button type="submit">LOG IN</button>
       <div class="register">
         <p>Don't have an account? <a href="register.html">Register</a></p>
       </div>
