--- a/src/main.html
+++ b/src/main.html
@@ -26,7 +26,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#myPage">MediHub</a>
+        <a class="navbar-brand" href="#myPage">MEDI HUB</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
       </div>
@@ -67,7 +67,7 @@
         <p>Eye care services</p>
       </div>
       <div class="col-sm-4">
-        <span class="glyphicon glyphicon-education logo-small"></span>
+        <span class="glyphicon glyphicon-user logo-small"></span>
         <h4>Pediatrics</h4>
         <p>Child care services</p>
       </div>
