--- a/src/patient.html
+++ b/src/patient.html
@@ -11,7 +11,7 @@
     <div class="main-content">
         <header>
             <b>
-                Your health,our priority
+                Your health,our priority.
             </b>
             
         </header>
